--- a/template.html
+++ b/template.html
@@ -31,7 +31,7 @@
   <a href="https://github.com/ananthb/5050"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   <div id="content">
     <div id="page-header">
-      <header><a href="{{ host }}">Fifty Fifty</a></header>
+      <header><a href="{{ host }}">half-n-half</a></header>
       <small>The link shortener with a twist</small>
     </div>
     {% if traceback %}
